--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -508,7 +508,12 @@ body { min-width: 1000px; width: 100%; min-height: 100%}
   width: 60px;
   height: 60px;
 }
-
+.airvis-distance-measurer {
+    text-align: center;
+}
+.airvis-distance-measurer h1 {
+    color:#FFF;
+}
 .pane-advert-on-visualization-panel-pane-1 { position: absolute; top: 50%; right: 10px;}
 .pane-advert-on-visualization-panel-pane-1 .pane-content { position: relative;}
 .pane-advert-on-visualization-panel-pane-1 .views-row { padding: 5px 0;}
