--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -526,10 +526,22 @@ body { min-width: 1000px; width: 100%; min-height: 100%}
 
 }
 
-.aivis-player-online-notification {
+.airvis-player-online-notification {
   position: absolute;
-  top: -50px;
-  background-color: rgba(255,100,100,0.5);
+  top: -40px;
+  background-color: rgba(253, 63, 63, 0.8);
   color: #ffffff;
   font-weight: bold;
+  width: 100%;
+  line-height: 35px;
+}
+
+.airvis-player-online-notification .airvis-player-online-notification-text {
+    padding-left: 5px;
+}
+
+.airvis-player-online-notification .airvis-window-close {
+  position: absolute;
+  right: 10px;
+  top: -2px;
 }
