--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -58,7 +58,7 @@ body { min-width: 1000px; width: 100%; min-height: 100%}
 .airvis-resize-bottom-right { bottom: -18px; cursor: se-resize; height: 20px; right: -18px; width: 20px;}
 
 /* css for markers on google map */
-.airvis-marker-title { font-size: 12px; white-space: nowrap; }
+.airvis-marker-title { font-size: 12px; white-space: nowrap; background: #FFF}
 .airvis-waypoint-title { white-space: nowrap; font-weight: bold; padding: 3px; }
 
 
