--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -443,12 +443,15 @@ body { min-width: 1000px; width: 100%; min-height: 100%}
 
 .sms-box {
   display: inline;
-  background-color: #88b7d5;
   border-radius: 4px;
   font-size: 10px;
   line-height: 10px;
   margin-top: 3px;
   padding: 2px 5px;
+}
+
+.airvis-has-no-sms-from-org .sms-box {
+    background-color: #88b7d5;
 }
 
 .airvis-chat-message {
