--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -112,6 +112,7 @@ body { min-width: 1000px; width: 100%; min-height: 100%}
 .airvis-window table .airvis-pilot-speed {width: 40px;}
 .airvis-window table .airvis-pilot-last-update {width: 60px;}
 .airvis-window table .airvis-pilot-tracker-name {width: 70px;}
+.airvis-window table .airvis-pilot-tracker-charge {width: 70px;}
 
 .airvis-tbl {
   position: absolute;
@@ -558,3 +559,7 @@ body { min-width: 1000px; width: 100%; min-height: 100%}
 .pilot-filter-input {margin-left:5px;height:10px;width:95px;}
 .airvis-table-body tr.picked-up {background-color: rgba(255, 255, 0, 0.5) !important;}
 .airvis-table-body tr.returned {background-color: rgba(66, 255, 82, 0.49) !important;}
+.retrieve-ufos-tables {padding-top: 3px;}
+.retrieve-ufos-tables .airvis-table-body{top: 64px;}
+.retrieve-ufo-table-statistic {text-align: center;}
+.statistic-info {color: #fff; margin-right: 20px;}
