--- a/s.css
+++ b/s.css
@@ -1,21 +1,53 @@
-table { 
-	width: 100%;
+table {
+    width: 100%;
     text-align: center;
+    margin-top: 10px;
 }
 
-th, td { 
-	border: 1px dotted silver; 
-	padding: 2px 5px;
+table caption {
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
-.timeout { 
-	font-size: 10px; 
+th, td {
+    border: 1px dotted silver;
+    padding: 2px 5px;
+}
+
+.desc {
+    background: url(img/desc.png) top right no-repeat;
+}
+
+.asc {
+    background: url(img/asc.png) top right no-repeat;
+}
+
+td.name, th.name {
+    text-align: left;
+}
+
+.timeout {
+    font-size: 10px;
+    position: absolute;
+    right: 5px;
+    top: 20px;
 }
 
 th a {
-	display: block;
+    display: block;
+    color: #000;
+    text-decoration: underline;
 }
 
+th a:hover {
+    color: #515151;
+}
+
+img.logo {
+    position:absolute;
+    top:5px;
+    left:3px;
+}
 
 /*====================================================
 CSS Tooltips by Adam Whitcroft
@@ -25,47 +57,50 @@ https://github.com/AdamWhitcroft/CSS.Tooltips
 /*  $Tooltips                                       */
 /*==================================================*/
 [data-tip] {
-    position:relative;
+    position: relative;
 }
+
 [data-tip]:before {
-    content:'';
+    content: '';
     /* hides the tooltip when not hovered */
-    display:none;
-    border:5px solid #1a1a1a;
+    display: none;
+    border: 5px solid #1a1a1a;
     /* 4 border technique to create the arrow */
-    border-top-color:#1a1a1a;
-    border-right-color:transparent;
-    border-bottom-color:transparent;
-    border-left-color:transparent;
-    position:absolute;
-    top:-7px;
-    left:4px;
-    z-index:8;
-    font-size:0;
-    line-height:0;
-    width:0;
-    height:0;
+    border-top-color: #1a1a1a;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    position: absolute;
+    top: -7px;
+    left: 4px;
+    z-index: 8;
+    font-size: 0;
+    line-height: 0;
+    width: 0;
+    height: 0;
 }
+
 [data-tip]:after {
-    display:none;
-    content:attr(data-tip);
-    position:absolute;
-    top:-35px;
-    left:0px;
-    padding:5px 8px;
-    background:#1a1a1a;
-    color:#fff;
-    z-index:9;
+    display: none;
+    content: attr(data-tip);
+    position: absolute;
+    top: -35px;
+    left: 0px;
+    padding: 5px 8px;
+    background: #1a1a1a;
+    color: #fff;
+    z-index: 9;
     font-size: 0.75em;
-    height:18px;
-    line-height:18px;
+    height: 18px;
+    line-height: 18px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    white-space:nowrap;
-    word-wrap:normal;
+    white-space: nowrap;
+    word-wrap: normal;
 }
+
 [data-tip]:hover:before,
 [data-tip]:hover:after {
-    display:block;
+    display: block;
 }
